--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 Informasi
             </div>
             <div class="mt-3 d-flex flex-wrap justify-content-center align-items-center">
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4" style="width: 14.5rem;">
+                <div class="card mx-2 mt-4 card-width">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -212,7 +212,7 @@
                             </small>
                         </div>
                     </div>
-                </div>
+                </div>                
             </div>
         </section>
 
