--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md custom-navbar navbar-light bg-light position-sticky sticky-top">
+    <nav class="navbar navbar-expand-md position-sticky sticky-top py-3" style="background-color: #ed1c24;background-image: url('/assets/img/background/header-publik.png');
+    ">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div>
                 <img src="/assets/img/background/nav-logo-new.png" style="height: 40px;" alt="">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-link active " href="#beranda">Beranda</a>
                     <a class="nav-link " href="#informasi">Informasi</a>
-                    <a class="nav-link me-4" href="#faq">FAQ</a>
+                    <a class="nav-link me-4 mb-2" href="#faq">FAQ</a>
                 </div>
                 <div class="d-flex">
                     <button type="button" class="btn btn-warning rounded text-light me-2">
