fix responsive for mobile display

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md position-sticky sticky-top py-3" style="background-color: #ed1c24;background-image: url('/assets/img/background/header-publik.png');
-    ">
+    <nav class="navbar navbar-expand-md position-sticky sticky-top py-3 custom-navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div>
                 <img src="/assets/img/background/nav-logo-new.png" style="height: 40px;" alt="">
