--- a/index.html
+++ b/index.html
@@ -62,13 +62,7 @@
             <div id="carouselExample" class="carousel slide mb-3">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://placehold.co/600x190" class="d-block w-100 rounded" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://placehold.co/600x190" class="d-block w-100 rounded" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://placehold.co/600x190" class="d-block w-100 rounded" alt="...">
+                        <img src="/assets/img/background/slider-1.png" class="d-block w-100 rounded" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
