add AOS CDN and fix responsive for mobile display

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets//css/style.css">
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
+
         $(document).ready(function () {
             $('.nav-link').on('click', function () {
                 // Hapus kelas 'active' dari semua tab navigasi di dalam navbar
@@ -56,7 +59,7 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container-fluid mt-3">
         <section id="beranda">
             <div id="carouselExample" class="carousel slide mb-3">
@@ -123,7 +126,7 @@
                 Informasi
             </div>
             <div class="mt-3 d-flex flex-wrap justify-content-center align-items-center">
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -137,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -151,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -165,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -179,7 +182,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -193,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mx-2 mt-4 card-width">
+                <div class="card mx-2 mt-4 card-width" data-aos="fade-up" data-aos-duration="1000">
                     <img class="card-img-top" src="/assets/img/background/no-thumbnail.jpg" alt="img" height="150"
                         contain>
                     <div class="p-2">
@@ -206,7 +209,7 @@
                             </small>
                         </div>
                     </div>
-                </div>                
+                </div>
             </div>
         </section>
 
@@ -218,7 +221,7 @@
                 Paling sering ditanyakan
             </div>
             <div class="accordion" id="accordionFaq">
-                <div class="accordion-item">
+                <div class="accordion-item" data-aos="fade-up" data-aos-duration="1000">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -234,7 +237,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item"  data-aos="fade-up" data-aos-duration="1000">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -254,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item"  data-aos="fade-up" data-aos-duration="1000">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -270,7 +273,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item"  data-aos="fade-up" data-aos-duration="1000">
                     <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -286,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item"  data-aos="fade-up" data-aos-duration="1000">
                     <h2 class="accordion-header" id="headingFive">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
@@ -313,9 +316,8 @@
     <div class="card-footer bg-dark text-light p-5 mt-5">
         <div class="row">
             <div class="col-md-8 mb-4">
-                <!-- On medium and larger screens, take 8 out of 12 columns -->
                 <div Ddiv class="h5">
-                   Direktorat Sumber Daya Pertahanan
+                    Direktorat Sumber Daya Pertahanan
                 </div>
                 <div>
                     Kementrian Pertahanan Republik Indonesia
@@ -326,10 +328,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <!-- On medium and larger screens, take 4 out of 12 columns -->
                 <div Ddiv class="h5">
                     Kontak
-                 </div>
+                </div>
                 <div>
                     datin.pothan@kemhan.go.id
                 </div>
@@ -349,10 +350,12 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
 
-
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
